--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,3 @@
 [server]
 maxUploadSize = 1500  # Set the maximum upload size in megabytes
+maxMessageSize = 1000  # Increase server-side data transmission limit (in MB)
